# CppHookFrameWork

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hook.cpp
example/: hook_for_ascendcl.cpp
include/framework/: common.hpp  framework.h  framework.hpp  hook_arg_info.hpp  hook_target.h  hook_target.hpp  invoke.h  invoke.hpp  macros.h  macros.hpp  pmu_recorder.h  relation_rules.hpp  scope_registry.h  scoped_timer.h  scoped_timer.hpp  symbol_resolver.h  trace_logger.h
src/: common.cpp  pmu_recorder.cpp  relation_rules.cpp  scope_registry.cpp  symbol_resolver.cpp  trace_logger.cpp
tools/: auto_profile.sh  merge_all_traces.py  trace_merger.py
